--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/WEB-INF/view/common/_curd/_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/common/_curd/_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/common/_function/_search.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_add.html=UTF-8
