--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -4,10 +4,24 @@ encoding//src/main/resources=UTF-8
 encoding//src/main/webapp/WEB-INF/view/common/_curd/_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/common/_curd/_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/common/_function/_search.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/common/_widget/fileupload.tag=UTF-8
+encoding//src/main/webapp/WEB-INF/view/common/_widget/imgupload.tag=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/career/career.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/career/career_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/career/career_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/career/career_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/major/major.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/major/major_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/major/major_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/major/major_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/notice/notice_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_add.html=UTF-8
