--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -8,6 +8,10 @@ encoding//src/main/webapp/WEB-INF/view/platform/blog/blog.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/notice/notice_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_add.html=UTF-8
