--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 JfinalBlade/jblade.log
 JfinalBlade/README.md
 JfinalBlade/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+JfinalBlade/.settings/org.eclipse.core.resources.prefs
+JfinalBlade/jblade.log
+*.prefs
+*.log
+JfinalBlade/target/m2e-wtp/web-resources/META-INF/maven/com.ikkong/jblade/pom.properties
