--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=3b22196052902353de7c7b9b62ec76500edda88d
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
@@ -10,16 +13,22 @@ encoding//src/main/webapp/WEB-INF/view/platform/blog/blog.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_view.html=UTF-8
-<<<<<<< HEAD
-encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType.html=UTF-8
-encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_add.html=UTF-8
-encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_edit.html=UTF-8
-encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_view.html=UTF-8
-=======
 encoding//src/main/webapp/WEB-INF/view/platform/career/career.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/course/course.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/course/course_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/course/course_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/course/course_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/coursePhase/coursePhase.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/coursePhase/coursePhase_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/coursePhase/coursePhase_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/coursePhase/coursePhase_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major_edit.html=UTF-8
@@ -28,7 +37,6 @@ encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_view.html=UTF-8
->>>>>>> 3b22196052902353de7c7b9b62ec76500edda88d
 encoding//src/main/webapp/WEB-INF/view/platform/notice/notice_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_add.html=UTF-8
