--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ JfinalBlade/jblade.log
 *.log
 JfinalBlade/target/m2e-wtp/web-resources/META-INF/maven/com.ikkong/jblade/pom.properties
 *.log
+JfinalBlade/.classpath
