--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -29,6 +29,10 @@ encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/doc/doc.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/doc/doc_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/doc/doc_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/doc/doc_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major_edit.html=UTF-8
@@ -38,6 +42,10 @@ encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/notice/notice_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/section/section.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/section/section_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/section/section_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/section/section_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_edit.html=UTF-8
