--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -17,6 +17,10 @@ encoding//src/main/webapp/WEB-INF/view/platform/career/career.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_view.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/costree/costree.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/costree/costree_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/costree/costree_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/costree/costree_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/course/course.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/course/course_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/course/course_edit.html=UTF-8
@@ -43,5 +47,8 @@ encoding//src/main/webapp/WEB-INF/view/platform/student/student_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/system/dept/dept.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/system/dept/dept_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/system/role/role.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/system/role/role_authority.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
