--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -42,12 +42,17 @@ encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/notice/notice_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/project/project.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/project/project_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/project/project_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/project/project_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_edit.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/student/student_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/system/dept/dept.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/system/dept/dept_add.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/system/menu/_widget/_menu_icon.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/system/role/role.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/system/role/role_authority.html=UTF-8
 encoding//src/test/java=UTF-8
