--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -16,6 +16,7 @@ encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/career/career_relation.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/career/career_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/costree/costree.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/costree/costree_add.html=UTF-8
@@ -36,6 +37,7 @@ encoding//src/main/webapp/WEB-INF/view/platform/courseType/courseType_view.html=
 encoding//src/main/webapp/WEB-INF/view/platform/major/major.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major_edit.html=UTF-8
+encoding//src/main/webapp/WEB-INF/view/platform/major/major_relation.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/major/major_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/mirror/mirror_add.html=UTF-8
