--- a/JfinalBlade/.settings/org.eclipse.core.resources.prefs
+++ b/JfinalBlade/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,7 @@ encoding//src/main/webapp/WEB-INF/view/common/_curd/_view.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/common/_function/_search.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/common/_widget/fileupload.tag=UTF-8
 encoding//src/main/webapp/WEB-INF/view/common/_widget/imgupload.tag=UTF-8
+encoding//src/main/webapp/WEB-INF/view/index.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_add.html=UTF-8
 encoding//src/main/webapp/WEB-INF/view/platform/blog/blog_edit.html=UTF-8
